k8s/argo/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: argocd
  labels:
    name: argocd
    app.kubernetes.io/instance: argocd
