k8s/argo/tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
  ingressClassName: tailscale
  tls:
  - hosts:
    - argocd
