k8s/argo/traefik-wf.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-wf-server-redirect
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argowf.marcyoung.us`)
      priority: 18
      middlewares:
        - name: httpredirectscheme
          namespace: traefik
      services:
        - name: argocd-workflows-argo-workflows-server
          port: 2746
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-wf-server
  annotations:
    kubernetes.io/ingress.class: traefik
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: dns01
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argowf.marcyoung.us`)
      priority: 19
      services:
        - name: argocd-workflows-argo-workflows-server
          port: 2746
  tls:
    secretName: argocd-wf-cert
