k8s/argo/traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-redirect
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.marcyoung.us`)
      priority: 10
      middlewares:
        - name: httpredirectscheme
          namespace: traefik
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.marcyoung.us`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      middlewares:
        - name: httpredirectscheme
          namespace: traefik
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  annotations:
    kubernetes.io/ingress.class: traefik
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: dns01
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.marcyoung.us`)
      priority: 12
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.marcyoung.us`) && Headers(`Content-Type`, `application/grpc`)
      priority: 13
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-cert
